# nvmpi-portable

./: .gitignore  CMakeLists.txt  README.md  nvmpi_portable.h  nvmpi_portable.pc.in  nvmpi_portable_dec.cpp  nvmpi_portable_enc.cpp  nvmpi_test.cc  portable_test.cc
cmake/: ffmpeg.cmake  nvmpi.cmake  opencv4.cmake
